# bflow

./: .gitignore  .gitmodules  control-struct.md  go.work  go.work.sum  insight.md  ui.md
control/: .env  .gitmodules  Makefile  PROMPT.md  compose.yml  cs.md  docker-compose.yml  er.mermaid  implementation_plan.md  roadmap.md  walkthrough.md
control/api/: .gitignore  go.mod  go.sum  main.go
control/api/application/: application.go
control/api/domain/: aggregate.go  event.go  issue.go  uow.go
control/api/infrastructure/: infrastructure.go
control/api/presentation/: presentation.go
control/api/template/: activate.html  recover.html
control/db/: Dockerfile
control/db/migrations/: 1766409400893.xml  1766409416304.xml  1768515090934-create-extensions.xml  1768515100617-create-table-account.xml  1768515109652-create-table-plan.xml  1768515125460-create-table-artifact.xml  1768515134817-create-table-document.xml  1768515134817-create-table-organization.xml  1768515148052-create-table-document.xml  1768515148052-create-table-organization.xml  1768515160379-create-table-cluster.xml  1768515173105-create-table-agent.xml  1768515173105-create-table-cluster_agent.xml  1768515182551-create-table-artifact_release.xml  1768515182551-create-table-release.xml  (+33 more)
control/doc/: eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
control/e2e/: pyproject.toml  variables.py
control/e2e/resources/: auth.resource
control/e2e/tests/01_system/: 01_healthcheck.robot
control/e2e/tests/02_auth/: 01_register.robot  02_recover.robot  03_refresh.robot
(+517 files in other folders)
